# Cobra

./: .gitignore  app.py  app_batch.py  batch_colorize.py  batch_ui.py  demo_batch_ui.py  main.py  pyproject.toml
Test/: BATCH_PROCESSOR_IMPLEMENTATION_SUMMARY.md  BATCH_UI_IMPLEMENTATION.md  BATCH_UI_QUICK_START.md  CLI_IMPLEMENTATION_SUMMARY.md  CONFIG_IMPLEMENTATION_SUMMARY.md  ERROR_HANDLING_IMPLEMENTATION_SUMMARY.md  FILE_IO_IMPLEMENTATION_SUMMARY.md  MEMORY_MANAGER_IMPLEMENTATION_SUMMARY.md  PAUSE_RESUME_CANCEL_IMPLEMENTATION_SUMMARY.md  PREVIEW_MODE_IMPLEMENTATION_SUMMARY.md  QUEUE_IMPLEMENTATION_SUMMARY.md  REFERENCE_PREVIEW_IMPLEMENTATION_SUMMARY.md  STATUS_TRACKER_IMPLEMENTATION_SUMMARY.md  TASK_13_COMPLETION_SUMMARY.md  TASK_15_VERIFICATION.md  TASK_5_IMPLEMENTATION_SUMMARY.md  ZIP_IMPLEMENTATION_SUMMARY.md  demo_batch_processor.py  demo_cli.py  demo_config.py  demo_file_io.py  demo_memory_manager.py  demo_pause_resume_cancel.py  demo_preview_mode.py  demo_queue.py  demo_reference_preview.py  demo_separate_line_art.py  demo_status_tracker.py  test_batch_processor.py  test_batch_ui_integration.py  test_cli.py  test_cli_integration.py  test_config_handler.py  test_error_handling.py  test_file_handler.py  test_infrastructure.py  test_memory_manager.py  test_preview_mode.py  test_preview_mode_unit.py  test_queue.py  (+7 more)
batch_processing/: BATCH_PROCESSOR_QUICK_START.md  ERROR_HANDLING_GUIDE.md  IMPLEMENTATION_STATUS.md  README.md  __init__.py  exceptions.py  logging_config.py  processor.py
docs/: FILE_ORGANIZATION.md  README.md  app_batch_DEPRECATED.md
(+30 files in other folders)
